[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-sdk"
version = "2.0.0"
description = "Meridian SDK — open-source, zero-cost, minimally invasive middleware for AI agents. Reports behavioral telemetry (no task content) and exposes /meridian/compliance."
authors = [{ name = "The Meridian Standards Body", email = "contact@meridian.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://meridian.ai"
Repository = "https://github.com/omerperchik/Meridian"
Documentation = "https://meridian.ai/developers/sdk"

[tool.hatch.build.targets.wheel]
packages = ["meridian"]
